blog.alexbeltran.dev/blog-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-static 
spec:
  selector:
    matchLabels:
      app: blog-static
  replicas: 3
  template:
    metadata:
      labels:
        app: blog-static
    spec:
      containers:
      - name: resume
        image: beltranalex928/blog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
