blog.alexbeltran.dev/blog-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-static
  labels:
    app: blog-static
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30002
  selector:
    app: blog-static
