blog.alexbeltran.dev/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - blog.alexbeltran.dev
    secretName: alexbeltran.dev
  rules:
  - host: blog.alexbeltran.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-static
            port:
              number: 80
      - path: /content/images/
        pathType: Prefix
        backend:
          service:
            name: blog-static
            port:
              number: 80
      - backend:
              service:
                name: blog-internal
                port:
                  number: 80
            path: /p/
            pathType: Prefix
      - backend:
              service:
                name: blog-internal
                port:
                  number: 80
            path: /ghost/api/content/
      - backend:
              service:
                name: blog-internal
                port:
                  number: 80
            path: /about/
            pathType: Exact
